Revert "Fix image cropping issues - display full images"
This reverts commit 26105a779a1c46295477fc27e7ba1e0d4b50efaa.

--- a/style.css
+++ b/style.css
@@ -719,16 +719,14 @@ img {
 
 .project-image {
     width: 100%;
-    height: auto;
     margin: 3rem 0;
     border-radius: 8px;
-    overflow: visible;
+    overflow: hidden;
 }
 
 .project-image img {
     width: 100%;
     height: auto;
-    object-fit: unset;
     display: block;
 }
 
